<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar" />

    <ScrollView

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp">

            <android.support.design.widget.CoordinatorLayout
                android:id="@+id/cord_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txt_fecha_pedir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:clickable="true"
                    android:drawableLeft="@drawable/calendario"
                    android:drawablePadding="24dp"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/fecha_pedir"
                    android:inputType="date"
                    android:maxLines="1"
                    app:layout_constraintLeft_toLeftOf="parent" />


            </android.support.design.widget.CoordinatorLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/cantidad_personas_pedir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/cantidad_personas"
                    android:drawablePadding="16dp"
                    android:hint="@string/cantidad_de_personas_pedir"
                    android:inputType="text|number"
                    android:maxLength="8" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="0dp"
                android:orientation="horizontal">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ida" />

                <CheckBox
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ida_y_vuelta" />


            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/comunidad_pedir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/comunidad"
                    android:drawablePadding="16dp"
                    android:hint="@string/comunidad_pedir"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/hora_pedir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:drawableLeft="@drawable/calendario"
                    android:drawablePadding="24dp"
                    android:ems="10"
                    android:focusable="false"
                    android:hint="@string/hora_pedir"
                    android:inputType="date"
                    android:maxLines="1"
                    app:layout_constraintLeft_toLeftOf="parent" />


            </android.support.design.widget.CoordinatorLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/lugar_origen_pedir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/lugar"
                    android:drawablePadding="16dp"
                    android:hint="@string/lugar_origen_pedir"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/lugar_destino_pedir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/lugar"
                    android:drawablePadding="16dp"
                    android:hint="@string/lugar_destino_pedir"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>


            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_pedir"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:background="@drawable/botones_redondos"
                android:padding="12dp"
                android:text="@string/btn_pedir" />

        </LinearLayout>
    </ScrollView>


</android.support.design.widget.CoordinatorLayout>
