<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <include layout="@layout/toolbar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:paddingTop="56dp"
            android:layout_marginTop="16dp">

            <!--
            <ImageView android:src="@drawable/image"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="24dp"
                android:layout_gravity="center_horizontal" />
                -->

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">
                <EditText
                    android:id="@+id/nombre_registrar_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                    android:drawablePadding="16dp"
                    android:hint="@string/usuario_registro"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">
                <EditText
                    android:id="@+id/lugar_registrar_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/lugar"
                    android:drawablePadding="16dp"
                    android:hint="@string/lugar_registro"
                    android:inputType="textCapWords" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/telefono_registrar_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="8"
                    android:drawableLeft="@drawable/telefono"
                    android:drawablePadding="16dp"
                    android:hint="@string/telefono_registro"
                    android:inputType="text|number" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/correo_registrar_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="40"
                    android:drawableLeft="@drawable/correo"
                    android:hint="@string/direccion_correo_registro"
                    android:drawablePadding="16dp"
                    android:inputType="textEmailAddress" />
            </android.support.design.widget.TextInputLayout>

            <!-- Password Label -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/contraseña_registrar_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/contrasena"
                    android:drawableStart="@drawable/contrasena"
                    android:drawablePadding="16dp"
                    android:hint="@string/contraseña_registro"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <!-- Signup Button -->
            <android.support.v7.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:layout_marginTop="24dp"
                android:padding="12dp"
                android:text="@string/btn_registrar_registro"
                android:background="@drawable/botones_redondos"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="100dp"
            android:layout_marginTop="510dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tienes_una_cuenta_registro"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/link_signin"
                android:layout_marginLeft="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingresar_registro"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

</android.support.design.widget.CoordinatorLayout>